Septima versión de mi app Punto Cruz

--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -7,7 +7,7 @@
     <h1>Resultado generado</h1>
 
     <h2>Imagen con símbolos:</h2>
-    <img src="{{ imagen_url }}" alt="Resultado" style="max-width: 100%; height: auto;">
+    <img src="data:image/png;base64,{{ imagen_base64 }}" alt="Resultado" style="max-width: 100%; height: auto;">
 
     <br><br>
 
