--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,10 @@
             <option value="amazon1">Amazon1</option>
         </select><br><br>
 
+        <label>Introduce un número:</label>
+        <input type="number" name="numero" min="1" required><br><br>
+
+
         <button type="submit">Convertir a PDF</button>
     </form>
 </body>
